# highonswift-real-estate-bot

./: README.md  pyproject.toml  report.md  requirements.txt
.devcontainer/: devcontainer.json
knowledge/: cit_alumni.xlsx  cit_alumni_master.xlsx  cit_alumni_selection.txt
src/crewai_sample/: cit_alumni_bot.py  cit_alumni_gemini.py  crew.py  ecom_crew.py  main.py  real_estate_bot.py  real_estate_crew.py  streamlit_test.py  string_know.py
src/crewai_sample/config/: agents.yaml  tasks.yaml
src/crewai_sample/tools/: ExaSearchTool.py
tests/: requirements.txt
