[project]
name = "crewai_sample"
version = "0.1.0"
description = "crewai-sample using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "exa_py>=1.7.0"
]

[project.scripts]
crewai_sample = "crewai_sample.main:run"
run_crew = "crewai_sample.main:run"
train = "crewai_sample.main:train"
replay = "crewai_sample.main:replay"
test = "crewai_sample.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
