[tool.poetry]
name = "crewai_sample"
version = "0.1.0"
description = "crewai-sample using crewAI"
authors = ["Satish <satish@highonswift.com>"]
python = ">=3.10,<3.14"

[tool.poetry.dependencies]
crewai = {extras = ["tools"], version = ">=0.86.0,<1.0.0"}
exa_py = ">=1.7.0"

[tool.poetry.scripts]
crewai_sample = "crewai_sample.main:run"
run_crew = "crewai_sample.main:run"
train = "crewai_sample.main:train"
replay = "crewai_sample.main:replay"
test = "crewai_sample.main:test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
